Version 2.1.171
    Axes can now replant cocoa plants (thanks Lyther)
Version 2.1.170
    Reverted a change that broke compatibility with the mcMMO papi ecloud thingy

Version 2.1.169
    Fixed a few memory leaks involving arrows
    Fixed mcMMO inappropriately assigning metadata to projectiles not fired from players
    Fix mctop not working if locale was set to something other than en_US
    mcMMO will now always emulate lure in order to stack it correctly and avoid vanilla bugs

Version 2.1.168
    Fixed an IndexOutOfBoundsException error when trying to access UserBlockTracker from an invalid range (thanks t00thpick1)
    (API) UserBlockTracker is now the interface by which our block-tracker will be known (thanks t00thpick1)
    Optimized memory access for Acrobatics fall anti-exploit mechanics (thanks t00thpick1)

Version 2.1.167
    Fixed a serious dupe bug
    Add McMMOPlayerPreXpGainEvent event for plugins to modify given exp (thanks electronicboy)
    Add SkillActivationPerkEvent (thanks electronicboy)

    NOTE:
    This bug was introduced in 2.1.165, update immediately if you are on 2.1.165 or 2.1.166

Version 2.1.166
    Fixed a small memory leak in the new COTW tracker
    Potentially fixed a ConcurrentModificationException involving the TransientEntityTracker (report this error if you encounter it)
    Music discs removed from the default fishing_treasures.yml
    Optimized how mcMMO saves player data (should improve timings on servers with bad disk speeds and or bad connectivity to their SQL server instance)

    NOTES:
    No one likes fishing up music discs, if you want this change it is recommended you delete fishing_treasures.yml and let it regenerate
    (You won't have this file if you haven't updated in a while, if so you don't need to do anything)